--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav mr-auto">
           <% if user_signed_in? %>
             <li class="nav-item">
               <%= link_to posts_path, class: 'nav-link text-dark' do %>投稿一覧<%= image_tag 'eb.jpg', :size =>'20x20' %>
